Added EditActivity and Dismissed Proximity Dialog

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -6,9 +6,8 @@
     <string name="feedback_settings">Feedback</string>
     <string name="help_settings">Help</string>
     <string name="edit">Edit</string>
-    
     <string name="title_activity_feedback">Feedback</string>
-    
     <string name="title_activity_help">Help</string>
+    <string name="title_activity_edit">Edit Card</string>
 
 </resources>
