--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,5 +9,6 @@
     <string name="signup"><u>Sign Up for Synchronous</u></string>
     <string name="upload_photo">Upload Photo</string>
     <string name="action_settings">Settings</string>
+    <string name="action_cards">Find Cards</string>
 
 </resources>
