--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,6 +8,7 @@
     <string name="login">Log In</string>
     <string name="signup"><u>Sign Up for Synchronous</u></string>
     <string name="upload_photo">Upload Photo</string>
+    <string name="take_photo">Take Photo</string>
     <string name="action_settings">Settings</string>
     <string name="action_findcards">Find</string>
     <string name="action_savedcards">Saved </string>
